--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,18 @@
 plugins {
     id 'java'
+    id 'maven-publish'
 }
 
 group 'fr.feavy'
-version '1.0'
+version '1.1'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
 }
 
 test {
